--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,5 +9,5 @@ main = "./main.py"  # Replace with the actual path to your main file
 workers_dev = true # Set to `true` for development deployment
 compatibility_date = "2024-11-14" # Use today's date or the date of initial deployment
 
-# Enable Python compatibility flag
+# Enable Python compatibility flag..
 compatibility_flags = ["python_workers"]
