--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,10 +4,10 @@ name = "terabox-api" # Name of your Cloudflare Worker
 type = "javascript" # Specifies the worker type; necessary for Python compatibility
 
 # Entry-point of your FastAPI application
-main = "./main.py"  # Replace with the actual path to your main file
+main = "./server.js"  # Replace with the actual path to your main file
 
 workers_dev = true # Set to `true` for development deployment
 compatibility_date = "2024-11-14" # Use today's date or the date of initial deployment
 
 # Enable Python compatibility flag..
-compatibility_flags = ["python_workers"]
+#compatibility_flags = ["python_workers"]
