--- a/wrangler.toml
+++ b/wrangler.toml
@@ -10,4 +10,4 @@ workers_dev = true # Set to `true` for development deployment
 compatibility_date = "2024-11-14" # Use today's date or the date of initial deployment
 
 # Enable Python compatibility flag..
-#compatibility_flags = ["python_workers"]
+compatibility_flags = ["nodejs_compat"]
